# reliquary

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  design-4b-migration-2026-07-23.md  pyproject.toml
.github/workflows/: cross-box-determinism.yml  docker-image.yml  validator-tests.yml
docker/: .env.example.trainer  Dockerfile.runtime-matrix  docker-compose.trainer.yml  docker-compose.weight-only.yml  entrypoint.sh
docker/eval-dashboard/: eval-dashboard.env.example  reliquary-eval-monitor.service  reliquary-eval-monitor.timer  reliquary-eval.service  reliquary-eval.timer
docs/: auction-v3-utility-foundation.md  concepts.md  eval-dashboard.md  miner-sparse-window-liveness-note.md  mining.md  training-recovery-2026-07-16.md  validating.md  validator_observability.md
docs/security/: 2026-05-25-cap-path-termination-incident.md  (+5 more)
reliquary/: constants.py
scripts/: audit_eval_holdout.py  backfill_aborted_window.py  benchmark_inference_contract.py  build_grader_bundle.sh  build_opencodeinstruct_subset.py  cheater_curve_threshold.py  compare_recovery_screens.py  launch_miner.sh  launch_validator.sh  measure_sketch_drift.py  prewarm_prompt_sources.py  publish_base_reset_checkpoint.py  replay_training_recovery.py  report_auth_forensics.py  report_code_semantic_auth.py  report_difficulty_auction.py  report_forced_seed_cdf.py  report_legacy_merkle_shadow.py  report_termination_shadow.py  report_training_recovery.py  report_utility_telemetry.py  run_eval_dashboard.py  screen_recovery_checkpoints.py  setup_remote_box.sh  smoke_train_vram.py  summarize_inference_contract.py  test_cheater_detection.py  verify_token_authenticity.py
(+215 files in other folders)
